--- a/src/app/show-character/character-attributes/character-attributes.component.html
+++ b/src/app/show-character/character-attributes/character-attributes.component.html
@@ -123,7 +123,7 @@
           <mat-list-item>Continuous Maximum Effort: <strong>{{character.continuousMaximumEffort()}} minutes</strong>
           </mat-list-item>
           <mat-divider></mat-divider>
-          <mat-list-item>Total Weight: <strong>{{character.weight + character.load()}}cn</strong></mat-list-item>
+          <mat-list-item>Total Weight: <strong>{{character.weight * 10 + character.load()}}cn</strong></mat-list-item>
           <mat-divider></mat-divider>
         </mat-list>
       </div>
