--- a/src/app/show-character/character-attributes/character-attributes.component.sass
+++ b/src/app/show-character/character-attributes/character-attributes.component.sass
@@ -1,10 +1,12 @@
+#abilities
+  justify-content: space-evenly
 .prime
   border: 3px solid #222288
 .prime-text
   color: #222288
 
 mat-card
-  width: 13%
+  width: 12%
 
 mat-expansion-panel
   width: 75%
@@ -16,4 +18,24 @@ mat-expansion-panel
       width: 45%
 
 
+@media screen and (max-width: 1600px)
+  #abilities
+    mat-card
+      width: 20%
+      margin-bottom: 24px
+
+@media screen and (max-width: 1200px)
+  mat-expansion-panel
+    width: 100%
+    margin-bottom: 24px
+
+@media screen and (max-width: 1024px)
+  #abilities
+    mat-card
+      width: 33%
+      margin-bottom: 24px
+
+@media screen and (max-width: 820px)
+  #abilities
+    mat-card
 
