--- a/src/app/show-character/character-inventory/character-inventory.component.html
+++ b/src/app/show-character/character-inventory/character-inventory.component.html
@@ -1,4 +1,4 @@
-<h2 class="section-subtitle">Inventory - {{character.load()}} / {{character.maximumLoad()}}</h2>
+<h2 class="section-subtitle">Inventory - {{character.load()}}cn / {{character.maximumLoad()}}cn</h2>
 <div class="container" id="inventory" cdkDropListGroup>
   <mat-card>
     <mat-list>
