--- a/src/app/show-character/character-inventory/character-inventory.component.sass
+++ b/src/app/show-character/character-inventory/character-inventory.component.sass
@@ -10,3 +10,9 @@ mat-list-item
   bottom: 4px
 button.edit-item-button mat-icon
   color: white
+
+@media screen and (max-width: 1200px)
+  #inventory
+    mat-card
+      width: 100%
+      margin-bottom: 24px
