--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@fortawesome/fontawesome-free/css/all.css"
+@import '~@fortawesome/fontawesome-free/css/brands.css'
 body
   margin: 0
   background-color: #EFEFEF
@@ -36,3 +38,10 @@ h2.section-subtitle
       margin-bottom: 32px
     strong
       font-size: 28px
+
+mat-dialog-content
+  width: 50vw
+  text-align: center
+  mat-form-field
+    width: 60%
+    margin: 0 auto
