--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,35 @@
-<mat-toolbar><a routerLink="/">ODND Character Sheet</a>
-  <ul>
-    <li><a routerLink="/character" routerLinkActive="active">Character</a></li>
-    <li><a routerLink="/adventure-log" routerLinkActive="active">Adventure Log</a></li>
-  </ul>
-  <button mat-raised-button color="primary" (click)="exportGame()">Export<mat-icon>arrow_downward</mat-icon></button>
-  <button mat-icon-button color="warn" routerLink="/raw-edit"><mat-icon>settings</mat-icon></button>
-</mat-toolbar>
-<router-outlet></router-outlet>
+<mat-sidenav-container>
+  <mat-sidenav #sidenav mode="side" [(opened)]="opened">
+    <app-links></app-links>
+    <button mat-raised-button color="primary" (click)="exportGame()">Export
+      <mat-icon>arrow_downward</mat-icon>
+    </button><br />
+    <button mat-icon-button color="warn" routerLink="/raw-edit">
+      <mat-icon>settings</mat-icon>
+    </button>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <mat-toolbar id="navigation">
+      <a id="site-title" routerLink="/">ODND Character Sheet</a>
+      <app-links></app-links>
+      <div>
+        <button class="menu-hamburger" mat-icon-button (click)="toggleMenu()">
+          <mat-icon>menu</mat-icon>
+        </button>
+        <button mat-raised-button color="primary" (click)="exportGame()">Export
+          <mat-icon>arrow_downward</mat-icon>
+        </button>
+        <button mat-icon-button color="warn" routerLink="/raw-edit">
+          <mat-icon>settings</mat-icon>
+        </button>
+      </div>
+    </mat-toolbar>
+    <router-outlet></router-outlet>
+    <mat-toolbar id="footer">
+      <a routerLink="/">ODND Character Sheet</a>
+      <small id="copyright">Copyright &copy; {{year}} Justin Edwards. All Rights Reserved. (for now)</small>
+      <a id="github-logo"  href="https://github.com/xrnm/odnd-character-sheet"><img src="/assets/images/github_logo.png" />GitHub</a>
+    </mat-toolbar>
+  </mat-sidenav-content>
+</mat-sidenav-container>
 
