--- a/src/app/show-character/character-experience/character-experience.component.sass
+++ b/src/app/show-character/character-experience/character-experience.component.sass
@@ -6,3 +6,9 @@
     position: absolute
     right: 8px
     bottom: 8px
+
+@media screen and (max-width: 820px)
+  #experience
+    mat-card
+      width: 100%
+      margin-bottom: 24px
