--- a/src/app/show-character/character-overview/character-overview.component.sass
+++ b/src/app/show-character/character-overview/character-overview.component.sass
@@ -5,7 +5,10 @@
     width: 20%
     h2
       text-align: center
-  mat-form-field, button
+  mat-form-field
+    margin: 0 auto
+    width: 100%
+  button
     margin: 0 auto
 
 #overview-stats
@@ -35,5 +38,18 @@
 #hp-area
   display: flex
   justify-content: space-evenly
+
+
+@media screen and (max-width: 1024px)
+  #overview, #overview-stats
+    mat-card
+      width: 45%
+      margin-bottom: 24px
+
+@media screen and (max-width: 820px)
+  #overview, #overview-stats
+    mat-card
+      width: 100%
+      margin-bottom: 24px
 
 
