--- a/src/app/show-character/character-purse/character-purse.component.sass
+++ b/src/app/show-character/character-purse/character-purse.component.sass
@@ -12,3 +12,9 @@
   position: absolute
   top: 4px
   right: 4px
+
+@media screen and (max-width: 1200px)
+  #purse
+    mat-card
+      width: 100%
+      margin-bottom: 24px
