--- a/src/app/show-character/character-spell-book/character-spell-book.component.html
+++ b/src/app/show-character/character-spell-book/character-spell-book.component.html
@@ -2,12 +2,14 @@
   <h2 class="section-subtitle">Spells</h2>
   <mat-card>
     <h2>Spellbook</h2>
+    <button color="primary" id="add-spell-button" mat-mini-fab (click)="openSpellDialog(character.spellbook, null)"><mat-icon>add</mat-icon></button>
     <mat-tab-group>
       <mat-tab *ngFor="let _ of spellLevelsIter(); let i = index" label="Level {{i+1}}">
         <mat-list cdkDropList (cdkDropListDropped)="drop($event)"
                   [cdkDropListData]="character.spellbook.getSpells(i+1)">
           <mat-list-item *ngFor="let spell of this.character.spellbook.getSpells(i+1)" cdkDrag>
             {{spell.name}} (Level {{spell.level}})
+            <button mat-icon-button  class="spell-edit-icon" color="primary" (click)="openSpellDialog(character.spellbook, spell)"><mat-icon>edit</mat-icon></button>
             <mat-divider></mat-divider>
           </mat-list-item>
         </mat-list>
