Hirelings start, lock fab

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -30,9 +30,13 @@ mat-sidenav-container
   left: 0
   right: 0
 
-
 .menu-hamburger
   display: none
+
+.lock-icon
+  position: fixed
+  bottom: 50px
+  right: 50px
 
 @media screen and (max-width: 760px)
   #navigation
