--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<h1>Original Dungeons & Dragons Interactive Character Sheet</h1>
+<h1>Revived Interactive Character Sheet</h1>
 <div>
   <div>
     <div>
