--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar id="navigation">
-      <a id="site-title" routerLink="/">ODND Character Sheet</a>
+      <a id="site-title" routerLink="/">Revived Character Sheet</a>
       <app-links></app-links>
       <div>
         <button class="menu-hamburger" mat-icon-button (click)="toggleMenu()">
@@ -25,8 +25,9 @@
       </div>
     </mat-toolbar>
     <router-outlet></router-outlet>
+    <button class="lock-icon" mat-mini-fab><mat-icon>lock</mat-icon></button>
     <mat-toolbar id="footer">
-      <a routerLink="/">ODND Character Sheet</a>
+      <a routerLink="/">Revived Character Sheet</a>
       <small id="copyright">Copyright &copy; {{year}} Justin Edwards. All Rights Reserved. (for now)</small>
       <a id="github-logo"  href="https://github.com/xrnm/odnd-character-sheet"><img src="/assets/images/github_logo.png" />GitHub</a>
     </mat-toolbar>
