--- a/src/app/links/links.component.html
+++ b/src/app/links/links.component.html
@@ -1,4 +1,6 @@
 <ul>
   <li><a routerLink="/character" routerLinkActive="active">Character</a></li>
-  <li><a routerLink="/adventure-log" routerLinkActive="active">Adventure Log</a></li>
+  <li><a routerLink="/hirelings" routerLinkActive="active">Hirelings</a></li>
+  <li><a routerLink="/adventure-log" routerLinkActive="active">Log</a></li>
+
 </ul>
