--- a/src/app/hirelings/hirelings.component.html
+++ b/src/app/hirelings/hirelings.component.html
@@ -1,13 +1,21 @@
-<button mat-raised-button (click)="addHireling()">Add Hireling</button>
-<mat-tab-group>
-  <mat-tab *ngFor="let character of hirelings" label="{{character.class}}">
-    <button mat-raised-button (click)="removeHireling(character)">Remove Hireling</button>
-    <character-overview [character]="character"></character-overview>
-    <character-attributes [character]="character"></character-attributes>
-    <character-spell-book [character]="character"></character-spell-book>
-    <character-experience [character]="character"></character-experience>
-    <character-purse [character]="character"></character-purse>
-    <character-inventory [character]="character"></character-inventory>
-    <character-notes [character]="character"></character-notes>
-  </mat-tab>
-</mat-tab-group>
+<div id="hirelings">
+  <div class="center">
+    <button class='add-hireling-button' color="primary" mat-mini-fab (click)="addHireling()">
+      <mat-icon>add</mat-icon>
+    </button>
+  </div>
+  <mat-tab-group>
+    <mat-tab *ngFor="let character of getHirelings()" label="{{bestLabel(character)}}">
+      <button color="warn" class="remove-hireling-button" mat-mini-fab (click)="removeHireling(character)">
+        <mat-icon>delete</mat-icon>
+      </button>
+      <character-overview [character]="character"></character-overview>
+      <character-attributes [character]="character"></character-attributes>
+      <character-spell-book [character]="character"></character-spell-book>
+      <character-experience [character]="character"></character-experience>
+      <character-purse [character]="character"></character-purse>
+      <character-inventory [character]="character"></character-inventory>
+      <character-notes [character]="character"></character-notes>
+    </mat-tab>
+  </mat-tab-group>
+</div>
