--- a/src/app/links/links.component.sass
+++ b/src/app/links/links.component.sass
@@ -10,7 +10,12 @@ ul
       color: rgba(0,0,0,.87)
       &.active
         color: red
-@media screen and (max-width: 760px)
+@media screen and (max-width: 1024px)
+  ul
+    li
+      padding: 8px
+
+@media screen and (max-width: 820px)
   ul
     width: 100%
     flex-flow: column
