--- a/src/styles.sass
+++ b/src/styles.sass
@@ -14,7 +14,7 @@ body
   margin: 0
   background-color: #EFEFEF
 
-h1,h2,h3,h4,h5
+h1,h2,h3,h4,h5, span
   font-family: Cinzel
 mat-toolbar a
   font-family: Cinzel
