Removing the strongs

--- a/src/app/show-character/character-attributes/character-attributes.component.html
+++ b/src/app/show-character/character-attributes/character-attributes.component.html
@@ -76,54 +76,54 @@
         <mat-list>
           <mat-list-item>
             System Shock
-            <strong>{{character.saving_throws.system_shock}}</strong>
+            {{character.saving_throws.system_shock}}
           </mat-list-item>
           <mat-divider></mat-divider>
           <mat-list-item>
             Death Ray / Poison
-            <strong>{{character.saving_throws.poison}}</strong>
+            {{character.saving_throws.poison}}
           </mat-list-item>
           <mat-divider></mat-divider>
           <mat-list-item>
             Wand / Paralysis / Polymorph
-            <strong>{{character.saving_throws.paralysis}}</strong>
+            {{character.saving_throws.paralysis}}
           </mat-list-item>
           <mat-divider></mat-divider>
           <mat-list-item>
             Petrification / Turn to stone
-            <strong>{{character.saving_throws.petrification}}</strong>
+            {{character.saving_throws.petrification}}
           </mat-list-item>
           <mat-divider></mat-divider>
           <mat-list-item>
             Dragon Breath / Area of Effect
-            <strong>{{character.saving_throws.dragon_breath}}</strong>
+            {{character.saving_throws.dragon_breath}}
           </mat-list-item>
           <mat-divider></mat-divider>
           <mat-list-item>
             Spell / Rod / Stave
-            <strong>{{character.saving_throws.spell}}</strong>
+            {{character.saving_throws.spell}}
           </mat-list-item>
           <mat-divider></mat-divider>
         </mat-list>
       </div>
       <div>
         <mat-list>
-          <mat-list-item>Precision Thrown Weight: <strong>{{character.precisionThrownWeight()}}cn</strong>
+          <mat-list-item>Precision Thrown Weight: {{character.precisionThrownWeight()}}cn
           </mat-list-item>
           <mat-divider></mat-divider>
-          <mat-list-item>Precision Thrown Distance: <strong>{{character.precisionThrownDistance()}} feet</strong>
+          <mat-list-item>Precision Thrown Distance: {{character.precisionThrownDistance()}} feet
           </mat-list-item>
           <mat-divider></mat-divider>
-          <mat-list-item>Maximum Deadlift / Push / Pull: <strong>{{character.maximumLift()}}cn</strong></mat-list-item>
+          <mat-list-item>Maximum Deadlift / Push / Pull: {{character.maximumLift()}}cn</mat-list-item>
           <mat-divider></mat-divider>
-          <mat-list-item>Continuous Travel: <strong>{{character.continuousTravel()}} hours</strong></mat-list-item>
+          <mat-list-item>Continuous Travel: {{character.continuousTravel()}} hours</mat-list-item>
           <mat-divider></mat-divider>
-          <mat-list-item>Hold Breath: <strong>{{character.holdBreath()}} seconds</strong></mat-list-item>
+          <mat-list-item>Hold Breath: {{character.holdBreath()}} seconds</mat-list-item>
           <mat-divider></mat-divider>
-          <mat-list-item>Continuous Maximum Effort: <strong>{{character.continuousMaximumEffort()}} minutes</strong>
+          <mat-list-item>Continuous Maximum Effort: {{character.continuousMaximumEffort()}} minutes
           </mat-list-item>
           <mat-divider></mat-divider>
-          <mat-list-item>Total Weight: <strong>{{character.weight * 10 + character.load()}}cn</strong></mat-list-item>
+          <mat-list-item>Total Weight: {{character.weight * 10 + character.load()}}cn</mat-list-item>
           <mat-divider></mat-divider>
         </mat-list>
       </div>
