--- a/src/app/show-character/character-overview/character-overview.component.html
+++ b/src/app/show-character/character-overview/character-overview.component.html
@@ -76,7 +76,7 @@
       <mat-divider></mat-divider>
     </mat-list>
     <mat-list *ngIf="editing=='background'">
-      <h2>Edit Background</h2>
+      <h2>Edit Background</h2>g
       <mat-list-item>
         <mat-form-field>
           <mat-label>Alignment:</mat-label>
@@ -182,15 +182,15 @@
     <mat-icon *ngIf="editing!='movement'" color='primary' (click)="editSection('movement')" class="edit">edit
     </mat-icon>
     <mat-list *ngIf="editing!='movement'">
-      <mat-list-item><span>Base Movement:&nbsp; </span> {{character.base_movement}}</mat-list-item>
+      <mat-list-item><span>Base Movement:&nbsp;</span>{{character.base_movement}}</mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item><span>Movement Rating:&nbsp; </span> {{character.movementRating()}}</mat-list-item>
+      <mat-list-item><span>Movement Rating:&nbsp;</span>{{character.movementRating()}}</mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item><span>1 Pace:&nbsp; </span> {{character.movementRating() / 6}}</mat-list-item>
+      <mat-list-item><span>1 Pace:&nbsp;</span>{{character.movementRating() / 6}}</mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item><span>2 Pace:&nbsp; </span> {{character.movementRating() / 3}}</mat-list-item>
+      <mat-list-item><span>2 Pace:&nbsp;</span>{{character.movementRating() / 3}}</mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item><span>3 Pace:&nbsp; </span> {{character.movementRating() / 2}}</mat-list-item>
+      <mat-list-item><span>3 Pace:&nbsp;</span>{{character.movementRating() / 2}}</mat-list-item>
       <mat-divider></mat-divider>
     </mat-list>
     <mat-list *ngIf="editing=='movement'">
