--- a/src/app/show-character/character-spell-book/character-spell-book.component.html
+++ b/src/app/show-character/character-spell-book/character-spell-book.component.html
@@ -1,18 +1,23 @@
 <div class="container" id="spells" cdkDropListGroup *ngIf="character.class != 'Fighter'">
   <h2 class="section-subtitle">Spells</h2>
   <mat-card>
+    <mat-icon color="primary" class="spell-info-icon" matTooltip="You may drag and drop spells from the spell book into your character's spell slots on the right. You may overcast spells, but you may not load spell into a slot of lower level">info</mat-icon>
     <h2>Available Spells</h2>
-    <button color="primary" id="add-spell-button" mat-mini-fab (click)="openSpellDialog(character.spellbook, null)"><mat-icon>add</mat-icon></button>
     <mat-tab-group>
       <mat-tab *ngFor="let _ of spellLevelsIter(); let i = index" label="Level {{i+1}}">
         <mat-list cdkDropList (cdkDropListDropped)="drop($event)"
                   [cdkDropListData]="character.spellbook.getSpells(i+1)">
           <mat-list-item *ngFor="let spell of this.character.spellbook.getSpells(i+1)" cdkDrag>
             {{spell.name}} (Level {{spell.level}})
-            <button mat-icon-button  class="spell-edit-icon" color="primary" (click)="openSpellDialog(character.spellbook, spell)"><mat-icon>edit</mat-icon></button>
+            <div class="action-buttons">
+              <button mat-mini-fab  color="primary" class="spell-memorize-icon" (click)="memorizeSpell(spell)"><mat-icon>save_alt</mat-icon></button>
+              <button mat-mini-fab  color="accent" class="spell-edit-icon" (click)="openSpellDialog(null, spell, null)"><mat-icon>edit</mat-icon></button>
+              <button mat-mini-fab  color="warn" class="spell-delete-icon" (click)="removeSpell(spell)"><mat-icon>delete</mat-icon></button>
+            </div>
             <mat-divider></mat-divider>
           </mat-list-item>
         </mat-list>
+        <button color="primary" class="add-spell-button" mat-mini-fab (click)="openSpellDialog(character.spellbook, null, i+1)"><mat-icon>add</mat-icon></button>
       </mat-tab>
     </mat-tab-group>
   </mat-card>
