--- a/src/app/show-character/character-inventory/character-inventory.component.sass
+++ b/src/app/show-character/character-inventory/character-inventory.component.sass
@@ -11,6 +11,9 @@ mat-list-item
 button.edit-item-button mat-icon
   color: white
 
+.overfull
+  text-decoration: line-through
+
 @media screen and (max-width: 1200px)
   #inventory
     mat-card
