--- a/src/app/show-character/character-inventory/container-dialog/container-dialog.component.html
+++ b/src/app/show-character/character-inventory/container-dialog/container-dialog.component.html
@@ -11,6 +11,11 @@
   </mat-form-field>
   <br/>
   <mat-form-field>
+    <mat-label>Maximum Capacity</mat-label>
+    <input matInput [(ngModel)]="container.capacity" type="number"/>
+  </mat-form-field>
+  <br />
+  <mat-form-field>
     <mat-label>Slots</mat-label>
     <input matInput [(ngModel)]="container.slots" type="number"/>
   </mat-form-field>
