--- a/src/app/show-character/item-list/item/item.component.html
+++ b/src/app/show-character/item-list/item/item.component.html
@@ -1,11 +1,11 @@
 <mat-list-item *ngIf="!item.deleted" >
   <div [class.empty]="item.quantity==0" matTooltip="{{item.description}}">{{item.inventoryString()}}</div>
   <div class="mat-list-actions">
-    <button [disabled]="item.quantity < 1" (click)="consume(item)" mat-icon-button color="warn"
+    <button [disabled]="item.quantity < 1" (click)="consume(item, $event)" mat-icon-button color="warn"
             aria-label="Consume Item">
       <mat-icon>remove</mat-icon>
     </button>
-    <button (click)="collect(item)" mat-icon-button color="primary" aria-label="Collect Item">
+    <button (click)="collect(item, $event)" mat-icon-button color="primary" aria-label="Collect Item">
       <mat-icon>add</mat-icon>
     </button>
     <button class="edit-item-button" (click)="openItemDialog(item)" mat-mini-fab color="accent" aria-label="Edit Item">
