Mounts would be nice, V1

--- a/src/app/show-character/show-character.component.html
+++ b/src/app/show-character/show-character.component.html
@@ -1,9 +1,10 @@
-<div>
+<div cdkDropListGroup>
   <character-overview [character]="character"></character-overview>
   <character-attributes [character]="character"></character-attributes>
   <character-spell-book [character]="character"></character-spell-book>
   <character-experience [character]="character"></character-experience>
   <character-purse [character]="character"></character-purse>
   <character-inventory [character]="character"></character-inventory>
+  <character-mounts [character]="character"></character-mounts>
   <character-notes [character]="character"></character-notes>
 </div>
