--- a/src/styles.sass
+++ b/src/styles.sass
@@ -48,6 +48,8 @@ h2.section-subtitle
       position: absolute
       top: 4px
       right: 4px
+      &:hover
+        cursor: pointer
     width: 85%
     text-align: center
     min-height: 50%
