--- a/src/app/show-character/character-inventory/character-inventory.component.html
+++ b/src/app/show-character/character-inventory/character-inventory.component.html
@@ -1,5 +1,5 @@
 <h2 class="section-subtitle">Inventory - {{character.load()}}cn / {{character.maximumLoad()}}cn</h2>
-<div class="container" id="inventory" cdkDropListGroup>
+<div class="container" id="inventory" >
   <mat-card>
     <mat-list>
       <h2>Weapons:</h2>
