Mounts first pass

--- a/src/app/show-character/character-purse/character-purse.component.html
+++ b/src/app/show-character/character-purse/character-purse.component.html
@@ -1,7 +1,7 @@
 <h2 class="section-subtitle">Coinage and Valuables</h2>
 <div id="purse" class="container">
   <mat-card>
-    <mat-list>
+    <mat-list dense>
       <h2>Coins</h2>
       <mat-icon color="primary" class="purse-info-icon" matTooltip="Hold shift to change by 10, Ctrl to change by 100, and both to change by 1000">info</mat-icon>
       <mat-list-item><span>Platinum: </span>
