--- a/src/app/show-character/character-experience/character-experience.component.html
+++ b/src/app/show-character/character-experience/character-experience.component.html
@@ -1,7 +1,7 @@
 <h2 class="section-subtitle">Experience</h2>
 <div id="experience" class="container">
   <mat-card *ngFor="let experience of character.experience; let i  = index;">
-    <mat-list>
+    <mat-list dense>
       <h2>Experience Block {{i + 1}}</h2>
       <mat-list-item><span>Class: </span> {{experience.class}} </mat-list-item>
       <mat-divider></mat-divider>
