--- a/src/app/show-character/character-mounts/character-mounts.component.sass
+++ b/src/app/show-character/character-mounts/character-mounts.component.sass
@@ -1,6 +1,16 @@
+.mount
+  width: 100%
+  h2, h5
+    margin-bottom: 0
+    text-align: center
+    font-family: Cinzel
+  .mount-cards
+    display: flex
+    flex-folow: row
+
 mat-card
   margin: 24px auto
-  width: 20%
+  width: 22%
   h2
     margin-bottom: 0
   mat-form-field
