--- a/src/app/show-character/character-inventory/character-inventory.component.html
+++ b/src/app/show-character/character-inventory/character-inventory.component.html
@@ -1,19 +1,19 @@
 <h2 class="section-subtitle">Inventory - {{character.load()}}cn / {{character.maximumLoad()}}cn</h2>
-<div class="container" id="inventory" cdkDropListGroup>
+<div class="container" id="inventory" >
   <mat-card>
-    <mat-list>
+    <mat-list dense>
       <h2>Weapons:</h2>
       <item-list [items]="character.weapons" [capacity]="4"></item-list>
     </mat-list>
   </mat-card>
   <mat-card>
-    <mat-list>
+    <mat-list dense>
       <h2>Armor:</h2>
       <item-list [items]="character.armor" [capacity]="4"></item-list>
     </mat-list>
   </mat-card>
   <mat-card>
-    <mat-list>
+    <mat-list dense>
       <h2>Slung Items:</h2>
       <div *ngFor="let si of character.getSlungItems()">
         <mat-list-item>{{si.inventoryString()}}
