--- a/src/styles.sass
+++ b/src/styles.sass
@@ -16,8 +16,17 @@ body
 
 h1,h2,h3,h4,h5, span
   font-family: Cinzel
+
 mat-toolbar a
   font-family: Cinzel
+
+
+.mat-list-actions
+  position: absolute
+  right: 12px
+  bottom: 4px
+  .edit-item-button mat-icon
+      color: white
 
 
 h1.section-title
@@ -48,6 +57,8 @@ h2.section-subtitle
       position: absolute
       top: 4px
       right: 4px
+      &:hover
+        cursor: pointer
     width: 85%
     text-align: center
     min-height: 50%
