Fixing mount NPE and removing letter G from edit background card

--- a/src/app/show-character/character-overview/character-overview.component.html
+++ b/src/app/show-character/character-overview/character-overview.component.html
@@ -76,7 +76,7 @@
       <mat-divider></mat-divider>
     </mat-list>
     <mat-list *ngIf="editing=='background'">
-      <h2>Edit Background</h2>g
+      <h2>Edit Background</h2>
       <mat-list-item>
         <mat-form-field>
           <mat-label>Alignment:</mat-label>
