--- a/src/app/show-character/character-attributes/character-attributes.component.sass
+++ b/src/app/show-character/character-attributes/character-attributes.component.sass
@@ -7,6 +7,10 @@
 
 mat-card
   width: 12%
+  .ability-info-icon
+    position: absolute
+    top: 4px
+    right: 4px
 
 mat-expansion-panel
   width: 75%
