--- a/src/app/show-character/character-overview/character-overview.component.sass
+++ b/src/app/show-character/character-overview/character-overview.component.sass
@@ -3,6 +3,10 @@
   justify-content: space-between
   mat-card
     width: 20%
+    .ability-info-icon
+      position: absolute
+      top: 4px
+      left: 4px
     h2
       text-align: center
   mat-form-field
@@ -19,6 +23,10 @@
     width: 15%
     text-align: center
     min-height: 50%
+    .ability-info-icon
+      position: absolute
+      top: 4px
+      left: 4px
     h4
       text-align: center
       font-size: 20px
@@ -28,6 +36,12 @@
       text-align: left
       font-size: 28px
       padding: 12px
+      &.damage-modifier
+        color: #f44336
+        font-size: 18px
+        margin-top: 20px
+        text-align: center
+
 
 #armor-class
   display: flex
